# regship

./: CMakeLists.txt  LICENSE  README.md
include/: regdfa.hpp  regmatcher.hpp  regparser.hpp  regparserattr.hpp  regpossets.hpp  regsymbol.hpp  regsymstream.hpp  util.hpp
include/impl/: regdfa.hpp  regparser.hpp
src/: main.cpp  regdfa.cpp  regmatcher.cpp  regparser.cpp  regparserattr.cpp  regpossets.cpp  regsymstream.cpp  util.cpp
tests/: CMakeLists.txt  read_symbol_test.cpp  regdfa_test.cpp  regmatcher_test.cpp  regparser_test.cpp  regsymstream_test.cpp  test_read_symbol.cpp  tree_info_test.cpp
